Fix firefox scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   background-color: #0a0b0d;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    scrollbar-width: none;
 }
 
 a {
